# libredis

./: AUTHORS  ChangeLog  INSTALL.TXT  Makefile.am  NEWS  README  configure.ac  libredis.py  redis.py  setup.py
libredis/: Makefile.am  connection.c  libredis.pc.in  parser.c
php/ext/libredis/: config.m4
pylibredis/: libredis.py  test.py
